--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.18.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.9.0"
